--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -9,7 +9,7 @@
     padding: 10px
     &::after
         display: inline-block
-        content: '❌'
+        content: '✖'
         color: $etsit_blue
         float: right
         margin-top: -8px
