--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -1,16 +1,33 @@
 @import "_variables"
 .button
-  float: left
-
+    float: left
+    
 .custom-button
-  border-radius: 5px
-  color: #4664A2
-  background-color: white
-  outline: none
-  border: 2px solid $etsit_blue
-  padding: 7px 18px
-  cursor: pointer
-  font-size: 18px
+    border-radius: 5px
+    color: $etsit_blue
+    background-color: white
+    outline: none
+    border: 2px solid $etsit_blue
+    padding: 7px 18px
+    cursor: pointer
+    font-size: 18px
 
 .actions
-  padding: 10px
+    padding: 10px
+.right
+    float: right
+    margin-right: 10px
+.right-addon
+    border-radius: 0px 5px 5px 0px
+    border: 2px solid $etsit_blue
+    border-left: none
+    height: 36px
+    padding: 6px
+    background-color: white
+    outline: none
+    text-transform: uppercase
+    color: $etsit_blue
+.input-right
+    border-radius: 5px 0px 0px 5px !important
+    border: 2px solid $etsit_blue !important
+    // border-right: none
