--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -6,13 +6,40 @@
 		font-size: 22px
 		font-weight: lighter
 		.fake-arrow
-				padding: 0px 10px
-				font-weight: bold
-				color: $etsit_blue
+			padding: 0px 10px
+			font-weight: bold
+			color: $etsit_blue
 	h2.form-subtitle
 		display: inline-block
 		font-size: 22px
 		color: $etsit_blue
-
 	.back-to-dashboard
 		margin-top: 40px
+	form
+		.field
+			display: inline-block
+			padding: 15px !important
+			padding-left: 0px !important
+			.flex-container
+				display: flex
+				label
+					width: auto
+					padding-right: 12px
+				input
+					flex-grow: 1
+		.field_inst_sending_name
+			width: calc(50% - 25px)
+		.field_erasmus_code
+			width: calc(50% - 25px)
+		.field_dept_coordinator
+			width: 100%
+		.field_school_family_dpt
+			// width: calc(50% - 25px)
+			width: 100%
+		.field_inst_adress
+			// width: calc(50% - 25px)
+			width: 100%
+			input
+				height: 50px !important
+		.field_contact_person, .field_inst_telephone, .field_inst_email
+			width: calc(33% - 22px)
