--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -35,7 +35,7 @@
 
   <div class="field">
     <%= f.label :nationality %><br />
-    <%= f.text_field :nationality, autofocus: true, autocomplete: "nationality" %>
+    <%= f.select :nationality, country_list %>
   </div>
 
   <div class="field">
