--- a/app/views/users/register_choice.html.erb
+++ b/app/views/users/register_choice.html.erb
@@ -1,2 +1,3 @@
-<td><%= button_to "Register with EIDAS", "/register/"+@nominee.registration_token+"/register_with_eidas", :method=> :get, form_class: "button"  %></td> 
-<td><%= button_to "Register with email and password", "/register/"+@nominee.registration_token+"/register_with_email_and_password", :method=> :get, form_class: "button"  %></td> 
+<h1>Welcome, <span class="email"> <%=@nominee.email%></span></h1>
+<div><%= button_to "Register with EIDAS", "/register/"+@nominee.registration_token+"/register_with_eidas", :method=> :get, form_class: "button", :class=> "custom-button"  %></div>     
+<div><%= button_to "Register with email and password", "/register/"+@nominee.registration_token+"/register_with_email_and_password", :method=> :get, form_class: "button", :class=> "custom-button"   %></div> 
