--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -6,12 +6,12 @@
     <%= f.hidden_field :registration_token, {value: @nominated_user.registration_token}%>
   <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "name" %>
   </div>
 
   <div class="field">
     <%= f.label :family_name %><br />
-    <%= f.text_field :family_name, autofocus: true, autocomplete: "family_name" %>
+    <%= f.text_field :family_name, autofocus: true, autocomplete: "family-name" %>
   </div>
 
   <div class="field">
@@ -30,7 +30,7 @@
 
   <div class="field">
     <%= f.label :permanent_adress %><br />
-    <%= f.text_field :permanent_adress, autofocus: true, autocomplete: "permanent_adress" %>
+    <%= f.text_field :permanent_adress, autofocus: true, autocomplete: "street-address" %>
   </div>
 
   <div class="field">
@@ -40,12 +40,12 @@
 
   <div class="field">
     <%= f.label :phone_number %><br />
-    <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
+    <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "phone-number" %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, value: @nominated_user.email, autofocus: true, autocomplete: "email"  %>
   </div>
 
   <div class="field">
@@ -62,7 +62,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :class => "custom-button" %>
   </div>
 <% end %>
 
