--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -30,6 +30,8 @@
 				margin: 5px
 				i
 					color: #bbb
+					&.dark
+						color: $etsit-blue
 					&.exists
 						color: rgb(155, 205, 88)
 					&.app-form
@@ -82,11 +84,11 @@
 			// flex-grow: 1
 			border-right: none
 		.flex-table-email-nominee
-			width: calc(100% - 320px)
+			width: calc(100% - 120px)
 		.flex-table-resend
-			width: 150px
+			width: 60px
 		.flex-table-erase
-			width: 170px			
+			width: 60px			
 		&.nominee-table
 			align-items: stretch
 			// justify-content: space-around
