--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -6,7 +6,7 @@
     <%= f.hidden_field :registration_token, {value: @nominated_user.registration_token}%>
   <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "given-name" %>
   </div>
 
   <div class="field">
@@ -16,7 +16,7 @@
 
   <div class="field">
     <%= f.label :birth_date %><br />
-    <%= f.date_field :birth_date, autofocus: true, autocomplete: "birth_date" %>
+    <%= f.date_field :birth_date, autofocus: true, autocomplete: "bday" %>
   </div>
 
   <div class="field">
@@ -25,7 +25,7 @@
     'Male',
     'Female',
     'Other'
-    ] %>
+    ] , autocomplete: "gender-identity"%>
 </div>
 
   <div class="field">
@@ -35,12 +35,12 @@
 
   <div class="field">
     <%= f.label :nationality %><br />
-    <%= f.select :nationality, country_list %>
+    <%= f.select :nationality, country_list, autocomplete: "country-name" %>
   </div>
 
   <div class="field">
     <%= f.label :phone_number %><br />
-    <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "phone-number" %>
+    <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "tel" %>
   </div>
 
   <div class="field">
